[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rkc-suite"
version = "2.0.0"
description = "FB100/400/900 communication library + web API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pyserial>=3.0",
  "fastapi>=0.115.0",      
  "uvicorn>=0.32.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "fb_controller",
  "rkc_service"
]
